--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -113,13 +112,13 @@
 </head>
 <body>
   <div class="header">
-    <img src="https://i.postimg.cc/ZqfrLhfF/walmart-logo.png" alt="Walmart Logo" />
+    <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/walmart%20Gift%20Card%20(2).png" alt="Walmart Logo" />
     <h1>Walmart Gift Card</h1>
   </div>
 
   <div class="container">
     <div class="card">
-      <img src="https://i.postimg.cc/NfZKw4tL/walmart-gift-main.jpg" alt="Walmart Gift Card">
+      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/walmart%20Gift%20Card%20(2).png" alt="Walmart Gift Card">
       <div class="card-content">
         <div class="title">$100 Walmart Gift Card</div>
         <div class="info">
@@ -141,11 +140,11 @@
     </div>
 
     <div class="screenshot">
-      <img src="https://i.postimg.cc/fLdQ7ntK/walmart-gift-sample2.jpg" alt="Gift Card Sample 1">
+      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/walmart%20Gift%20Card%20(2).png" alt="Gift Card Sample 1">
     </div>
-    
+
     <div class="screenshot">
-      <img src="https://i.postimg.cc/BbGnXbBz/walmart-gift-sample3.jpg" alt="Gift Card Sample 2">
+      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/walmart%20Gift%20Card%20(2).png" alt="Gift Card Sample 2">
     </div>
 
     <a href="https://installchecker.com/cl/i/qk7gn4" class="download-btn" target="_blank">Get Gift Card Now</a>
