--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
 </head>
 <body>
   <div class="header">
-    <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/walmart%20Gift%20Card%20(2).png" alt="Walmart Logo" />
+    <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/walmart-gift-card.png" alt="Walmart Logo" />
     <h1>Walmart Gift Card</h1>
   </div>
 
   <div class="container">
     <div class="card">
-      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/walmart%20Gift%20Card%20(2).png" alt="Walmart Gift Card">
+      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/walmart-gift-card.png" alt="Walmart Gift Card">
       <div class="card-content">
         <div class="title">$100 Walmart Gift Card</div>
         <div class="info">
@@ -140,14 +140,12 @@
     </div>
 
     <div class="screenshot">
-      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/walmart%20Gift%20Card%20(2).png" alt="Gift Card Sample 1">
+      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/walmart-gift-card.png" alt="Gift Card Sample 1">
     </div>
 
     <div class="screenshot">
-      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/walmart%20Gift%20Card%20(2).png" alt="Gift Card Sample 2">
+      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/walmart-gift-card.png" alt="Gift Card Sample 2">
     </div>
-
-    <a href="https://installchecker.com/cl/i/qk7gn4" class="download-btn" target="_blank">Get Gift Card Now</a>
   </div>
 </body>
 </html>
