--- a/index.html
+++ b/index.html
@@ -13,26 +13,19 @@
       padding: 0;
     }
     .header {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      text-align: center;
       background-color: #161b22;
-      padding: 15px 20px;
+      padding: 20px 10px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.5);
     }
-    .header img {
-      height: 35px;
-      margin-right: 10px;
-    }
     .header h1 {
-      font-size: 20px;
+      font-size: 22px;
       color: #facc15;
       margin: 0;
       font-weight: 600;
     }
     .container {
-      max-width: 420px;
-      width: 100%;
+      max-width: 440px;
       margin: 0 auto;
       padding: 20px;
     }
@@ -45,7 +38,8 @@
     }
     .card img {
       width: 100%;
-      height: auto;
+      display: block;
+      border-bottom: 1px solid #2d2d2d;
     }
     .card-content {
       padding: 16px;
@@ -54,6 +48,7 @@
       font-size: 22px;
       font-weight: bold;
       margin-bottom: 10px;
+      color: #ffffff;
     }
     .info {
       display: flex;
@@ -103,13 +98,12 @@
 </head>
 <body>
   <div class="header">
-    <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/logo.png" alt="Job Offers Logo" /
     <h1>Walmart Gift Card</h1>
   </div>
 
   <div class="container">
     <div class="card">
-      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/walmart-gift-card.png" alt="Walmart Gift Card">
+      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/logo.png" alt="Walmart Gift Card" />
       <div class="card-content">
         <div class="title">$100 Walmart Gift Card</div>
         <div class="info">
