--- a/index.html
+++ b/index.html
@@ -10,73 +10,82 @@
       background-color: #0d1117;
       font-family: 'Segoe UI', sans-serif;
       color: #ffffff;
-      padding: 0;
     }
+
     .header {
-      text-align: center;
       background-color: #161b22;
-      padding: 20px 10px;
+      padding: 20px;
+      text-align: center;
       box-shadow: 0 4px 12px rgba(0,0,0,0.5);
     }
+
     .header h1 {
       font-size: 22px;
       color: #facc15;
       margin: 0;
-      font-weight: 600;
     }
+
     .container {
-      max-width: 440px;
-      margin: 0 auto;
-      padding: 20px;
+      max-width: 450px;
+      margin: 20px auto;
+      padding: 15px;
     }
+
     .card {
       background-color: #161b22;
       border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
       overflow: hidden;
-      margin-bottom: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
     }
+
     .card img {
       width: 100%;
+      height: auto;
       display: block;
-      border-bottom: 1px solid #2d2d2d;
     }
+
     .card-content {
       padding: 16px;
     }
+
     .title {
       font-size: 22px;
       font-weight: bold;
       margin-bottom: 10px;
-      color: #ffffff;
     }
+
     .info {
       display: flex;
       justify-content: space-between;
-      align-items: center;
       font-size: 14px;
-      margin-bottom: 16px;
       color: #c9d1d9;
+      margin-bottom: 16px;
     }
+
     .tag {
       background-color: #30363d;
       padding: 5px 10px;
       border-radius: 8px;
     }
+
     .description {
       font-size: 15px;
       line-height: 1.6;
       color: #c9d1d9;
       margin-bottom: 16px;
     }
+
     .features {
       margin-bottom: 16px;
+      padding-left: 18px;
     }
+
     .features li {
       font-size: 14px;
       margin-bottom: 6px;
       color: #d1d5db;
     }
+
     .download-btn {
       display: block;
       width: 100%;
@@ -89,8 +98,8 @@
       border-radius: 10px;
       text-decoration: none;
       transition: background 0.3s;
-      margin-top: 10px;
     }
+
     .download-btn:hover {
       background: linear-gradient(to right, #0284c7, #2563eb);
     }
@@ -103,7 +112,7 @@
 
   <div class="container">
     <div class="card">
-      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/logo.png" alt="Walmart Gift Card" />
+      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/logo.png" alt="Walmart Logo">
       <div class="card-content">
         <div class="title">$100 Walmart Gift Card</div>
         <div class="info">
