--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       background-color: #0d1117;
       font-family: 'Segoe UI', sans-serif;
       color: #ffffff;
+      padding: 0;
     }
 
     .header {
@@ -23,25 +24,29 @@
       font-size: 22px;
       color: #facc15;
       margin: 0;
+      font-weight: 600;
     }
 
     .container {
-      max-width: 450px;
-      margin: 20px auto;
-      padding: 15px;
+      max-width: 420px;
+      width: 100%;
+      margin: 0 auto;
+      padding: 20px;
     }
 
     .card {
       background-color: #161b22;
       border-radius: 15px;
-      overflow: hidden;
       box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+      overflow: hidden;
+      margin-bottom: 20px;
     }
 
     .card img {
       width: 100%;
       height: auto;
       display: block;
+      margin: auto;
     }
 
     .card-content {
@@ -57,9 +62,10 @@
     .info {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       font-size: 14px;
-      color: #c9d1d9;
       margin-bottom: 16px;
+      color: #c9d1d9;
     }
 
     .tag {
@@ -77,7 +83,6 @@
 
     .features {
       margin-bottom: 16px;
-      padding-left: 18px;
     }
 
     .features li {
@@ -98,6 +103,7 @@
       border-radius: 10px;
       text-decoration: none;
       transition: background 0.3s;
+      margin-top: 10px;
     }
 
     .download-btn:hover {
@@ -112,7 +118,7 @@
 
   <div class="container">
     <div class="card">
-      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/refs/heads/main/logo.png" alt="Walmart Logo">
+      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/main/logo.png" alt="Job Offers Logo">
       <div class="card-content">
         <div class="title">$100 Walmart Gift Card</div>
         <div class="info">
