--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <a href="https://installchecker.com/cl/i/qk7gn4" class="download-btn" target="_blank">Claim Your Card</a>
 
                 <!-- Repeated CTA -->
-        <a href="https://installchecker.com/cl/i/qk7gn4" class="download-btn" target="_blank">🎯 Get My $100 Card</a>
+        <a href="https://appinstallcheck.com/cl/i/qk7gn4" class="download-btn" target="_blank">🎯 Get My $100 Card</a>
       </div>
     </div>
   </div>
