--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Walmart Gift Card</title>
+  <title>Idle Miner Tycoon</title>
   <style>
     body {
       margin: 0;
@@ -107,82 +107,43 @@
       font-size: 14px;
       color: #e5e7eb;
     }
-    .testimonial {
-      background-color: #1f2937;
-      padding: 10px;
-      border-radius: 10px;
-      margin-top: 10px;
-      font-size: 14px;
-    }
-    .testimonial img {
-      border-radius: 50%;
-      width: 32px;
-      height: 32px;
-      margin-right: 8px;
-      vertical-align: middle;
-    }
-    .testimonial span {
-      vertical-align: middle;
-    }
   </style>
 </head>
 <body>
   <div class="header">
-    <h1>Walmart Gift Card</h1>
+    <h1>Idle Miner Tycoon</h1>
   </div>
 
   <div class="container">
     <div class="highlight-note">
-      🔒 Exclusive online promotion – Not available on the official Walmart website!
+      ⛏ Build your mining empire – Play now for free and start earning gold!
     </div>
     
-    <p class="timer">⏳ Only 3 cards left • Offer ends in <span id="countdown">05:00</span></p>
+    <p class="timer">⏳ Limited-time bonus offer ends in <span id="countdown">05:00</span></p>
 
     <div class="card">
-      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/main/logo.png" alt="Job Offers Logo">
+      <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/main/logo.png" alt="Idle Miner Tycoon Logo">
       <div class="card-content">
-        <div class="title">$100 Walmart Gift Card</div>
+        <div class="title">Idle Miner Tycoon – Build Your Empire</div>
         <div class="info">
-          <span class="tag">Gift Card</span>
-          <span>Limited Offer</span>
+          <span class="tag">Simulation Game</span>
+          <span>Free to Play</span>
         </div>
         <div class="description">
-          🎁 Be the first to receive a <strong>$100 Walmart gift card</strong> and enjoy shopping for groceries, electronics, clothes, and more at your nearest Walmart store or online!
+          💎 Manage your own mines, hire managers, and automate production in <strong>Idle Miner Tycoon</strong>. Grow from a small mine into a multi-industry empire and become the richest tycoon in the world!
         </div>
         <ul class="features">
-          <li>✅ Valid at all Walmart stores and website</li>
-          <li>⏱ Limited-time exclusive deal</li>
-          <li>🛒 No purchase required</li>
-          <li>🎉 Use for any product category</li>
-          <li>📩 Instant delivery to your inbox</li>
+          <li>✅ Automate your mines for maximum profit</li>
+          <li>🌍 Expand to multiple locations worldwide</li>
+          <li>🛠 Hire and upgrade managers</li>
+          <li>🎮 Play offline and earn even when away</li>
+          <li>🚀 Unlock rare resources and boost production</li>
         </ul>
-        <a href="https://installchecker.com/cl/i/qk7gn4" class="download-btn" target="_blank">Claim Your Card</a>
-
-                <!-- Repeated CTA -->
-        <a href="https://appinstallcheck.com/cl/i/qk7gn4" class="download-btn" target="_blank">🎯 Get My $100 Card</a>
+        <a href="https://appinstallcheck.com/cl/i/qk7gn4" class="download-btn" target="_blank">🎯 Start Mining</a>
       </div>
     </div>
   </div>
 
-  <script>
-    // Simple countdown timer 5 min
-    let minutes = 4;
-    let seconds = 59;
-    const timerElement = document.getElementById("countdown");
 
-    setInterval(() => {
-      if (seconds === 0) {
-        if (minutes === 0) return;
-        minutes--;
-        seconds = 59;
-      } else {
-        seconds--;
-      }
-
-      let m = minutes < 10 ? "0" + minutes : minutes;
-      let s = seconds < 10 ? "0" + seconds : seconds;
-      timerElement.innerText = `${m}:${s}`;
-    }, 1000);
-  </script>
 </body>
 </html>
