--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
     .title {
       font-size: 22px;
       font-weight: bold;
+      margin-bottom: 6px;
+    }
+    .rating {
+      font-size: 14px;
+      color: #facc15;
       margin-bottom: 10px;
     }
     .info {
@@ -93,12 +98,6 @@
     .download-btn:hover {
       background: linear-gradient(to right, #0284c7, #2563eb);
     }
-    .timer {
-      color: #f87171;
-      font-weight: bold;
-      font-size: 15px;
-      margin-bottom: 10px;
-    }
     .highlight-note {
       background-color: #1f2937;
       padding: 10px;
@@ -116,34 +115,31 @@
 
   <div class="container">
     <div class="highlight-note">
-      ⛏ Build your mining empire – Play now for free and start earning gold!
+      💎 Build your mining empire and automate your production with Idle Miner Tycoon!
     </div>
-    
-    <p class="timer">⏳ Limited-time bonus offer ends in <span id="countdown">05:00</span></p>
 
     <div class="card">
       <img src="https://raw.githubusercontent.com/jobsoffers/Walmart-gift-card/main/logo.png" alt="Idle Miner Tycoon Logo">
       <div class="card-content">
-        <div class="title">Idle Miner Tycoon – Build Your Empire</div>
+        <div class="title">Idle Miner Tycoon</div>
+        <div class="rating">⭐ 4.5 / 5 based on real player reviews</div>
         <div class="info">
           <span class="tag">Simulation Game</span>
-          <span>Free to Play</span>
+          <span>Top Rated</span>
         </div>
         <div class="description">
-          💎 Manage your own mines, hire managers, and automate production in <strong>Idle Miner Tycoon</strong>. Grow from a small mine into a multi-industry empire and become the richest tycoon in the world!
+          🛠 Manage your mines, hire managers, and earn idle cash in this addictive tycoon simulation! Perfect for strategy lovers who enjoy building and optimizing.
         </div>
         <ul class="features">
-          <li>✅ Automate your mines for maximum profit</li>
-          <li>🌍 Expand to multiple locations worldwide</li>
-          <li>🛠 Hire and upgrade managers</li>
-          <li>🎮 Play offline and earn even when away</li>
-          <li>🚀 Unlock rare resources and boost production</li>
+          <li>✅ Build and expand multiple mines</li>
+          <li>💰 Automate production for more profits</li>
+          <li>🌎 Play offline and online</li>
+          <li>🎯 Compete in live events for big rewards</li>
+          <li>📈 Watch your business grow while you sleep</li>
         </ul>
-        <a href="https://appinstallcheck.com/cl/i/qk7gn4" class="download-btn" target="_blank">🎯 Start Mining</a>
+        <a href="https://appinstallcheck.com/cl/i/qk7gn4" class="download-btn" target="_blank">🎯 Download Now</a>
       </div>
     </div>
   </div>
-
-
 </body>
 </html>
