--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     .card img {
       width: 100%;
       height: auto;
+      display: block;
     }
     .card-content {
       padding: 16px;
@@ -52,6 +53,11 @@
     .rating {
       font-size: 14px;
       color: #facc15;
+      margin-bottom: 4px;
+    }
+    .rating-count {
+      font-size: 12px;
+      color: #c9d1d9;
       margin-bottom: 10px;
     }
     .info {
@@ -119,13 +125,14 @@
     </div>
 
     <div class="card">
-      <img src="https://raw.githubusercontent.com/appliink/apptry/refs/heads/main/IMG_20250809_154135.png" alt="Idle Miner Tycoon Logo">
+      <img src="https://raw.githubusercontent.com/appliink/apptry/main/IMG_20250809_154135.png" alt="Idle Miner Tycoon Logo">
       <div class="card-content">
         <div class="title">Idle Miner Tycoon</div>
         <div class="rating">⭐ 4.5 / 5 based on real player reviews</div>
+        <div class="rating-count">📊 5 million reviews</div>
         <div class="info">
           <span class="tag">Simulation Game</span>
-          <span>Top Rated</span>
+          <span>+100M Downloads</span>
         </div>
         <div class="description">
           🛠 Manage your mines, hire managers, and earn idle cash in this addictive tycoon simulation! Perfect for strategy lovers who enjoy building and optimizing.
