--- a/index.html
+++ b/index.html
@@ -1,152 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Idle Miner Tycoon</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: #0d1117;
-      font-family: 'Segoe UI', sans-serif;
-      color: #ffffff;
-      padding: 0;
-    }
-    .header {
-      background-color: #161b22;
-      padding: 15px 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-      text-align: center;
-    }
-    .header h1 {
-      font-size: 22px;
-      color: #facc15;
-      margin: 0;
-      font-weight: 600;
-    }
-    .container {
-      max-width: 420px;
-      width: 100%;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    .card {
-      background-color: #161b22;
-      border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-      overflow: hidden;
-      margin-bottom: 20px;
-    }
-    .card img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-    .card-content {
-      padding: 16px;
-    }
-    .title {
-      font-size: 22px;
-      font-weight: bold;
-      margin-bottom: 6px;
-    }
-    .rating {
-      font-size: 14px;
-      color: #facc15;
-      margin-bottom: 4px;
-    }
-    .rating-count {
-      font-size: 12px;
-      color: #c9d1d9;
-      margin-bottom: 10px;
-    }
-    .info {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      font-size: 14px;
-      margin-bottom: 16px;
-      color: #c9d1d9;
-    }
-    .tag {
-      background-color: #30363d;
-      padding: 5px 10px;
-      border-radius: 8px;
-    }
-    .description {
-      font-size: 15px;
-      line-height: 1.6;
-      color: #c9d1d9;
-      margin-bottom: 16px;
-    }
-    .features {
-      margin-bottom: 16px;
-    }
-    .features li {
-      font-size: 14px;
-      margin-bottom: 6px;
-      color: #d1d5db;
-    }
-    .download-btn {
-      display: block;
-      width: 100%;
-      text-align: center;
-      background: linear-gradient(to right, #0ea5e9, #3b82f6);
-      color: #fff;
-      padding: 12px;
-      font-size: 16px;
-      border: none;
-      border-radius: 10px;
-      text-decoration: none;
-      transition: background 0.3s;
-      margin-top: 10px;
-    }
-    .download-btn:hover {
-      background: linear-gradient(to right, #0284c7, #2563eb);
-    }
-    .highlight-note {
-      background-color: #1f2937;
-      padding: 10px;
-      margin-bottom: 10px;
-      border-left: 4px solid #facc15;
-      font-size: 14px;
-      color: #e5e7eb;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Idle Miner Tycoon</title>
+<style>
+  /* Reset */
+  * {margin: 0; padding: 0; box-sizing: border-box;}
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    color: white;
+    background-color: #0d1117;
+    overflow-x: hidden;
+  }
+
+  /* Hero Section */
+  .hero {
+    height: 100vh;
+    background: url('https://i.imgur.com/Q4uKFxM.jpeg') center/cover no-repeat;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .hero::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: rgba(0,0,0,0.6);
+  }
+  .hero-content {
+    position: relative;
+    z-index: 2;
+    max-width: 800px;
+    padding: 20px;
+  }
+  .hero-logo {
+    width: 140px;
+    margin-bottom: 20px;
+  }
+  .hero h1 {
+    font-size: 2.4rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  .hero p {
+    font-size: 1.1rem;
+    margin-bottom: 20px;
+    color: #d1d5db;
+  }
+  .btn-primary {
+    display: inline-block;
+    padding: 14px 26px;
+    background: linear-gradient(90deg, #0ea5e9, #3b82f6);
+    color: white;
+    font-size: 1rem;
+    border-radius: 10px;
+    text-decoration: none;
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+  .btn-primary:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 6px 20px rgba(0,0,0,0.4);
+  }
+
+  /* Features Section */
+  .features {
+    padding: 60px 20px;
+    background: #111827;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    gap: 20px;
+    max-width: 1100px;
+    margin: auto;
+  }
+  .feature-card {
+    background: rgba(255,255,255,0.05);
+    border-radius: 15px;
+    padding: 20px;
+    text-align: center;
+    transition: transform 0.3s;
+  }
+  .feature-card:hover {
+    transform: translateY(-5px);
+  }
+  .feature-card span {
+    font-size: 2rem;
+    display: block;
+    margin-bottom: 10px;
+  }
+  .feature-card h3 {
+    font-size: 1.2rem;
+    margin-bottom: 6px;
+    color: #facc15;
+  }
+  .feature-card p {
+    font-size: 0.9rem;
+    color: #d1d5db;
+  }
+
+  /* Rating Section */
+  .rating-section {
+    background: #0f172a;
+    padding: 50px 20px;
+    text-align: center;
+  }
+  .stars {
+    font-size: 1.5rem;
+    color: #facc15;
+    margin-bottom: 10px;
+  }
+  .rating-section p {
+    color: #d1d5db;
+    font-size: 0.95rem;
+  }
+
+  /* Sticky Download Button */
+  .sticky-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: linear-gradient(90deg, #0ea5e9, #3b82f6);
+    color: white;
+    padding: 12px 20px;
+    border-radius: 50px;
+    text-decoration: none;
+    font-weight: bold;
+    z-index: 999;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+    transition: transform 0.2s;
+  }
+  .sticky-btn:hover {
+    transform: scale(1.05);
+  }
+</style>
 </head>
 <body>
-  <div class="header">
+
+<!-- Hero Section -->
+<section class="hero">
+  <div class="hero-content">
+    <img src="https://i.imgur.com/0bW2FIE.png" alt="Prison Empire Tycoon Logo" class="hero-logo">
     <h1>Idle Miner Tycoon</h1>
+    <p>Build your mining empire and automate your production to become the richest tycoon in the world !.</p>
+    <a href="https://appinstallcheck.com/cl/i/qk7gn4" class="btn-primary">🎮 Play Now</a>
   </div>
+</section>
 
-  <div class="container">
-    <div class="highlight-note">
-      💎 Build your mining empire and automate your production with Idle Miner Tycoon!
-    </div>
-
-    <div class="card">
-      <img src="https://raw.githubusercontent.com/appliink/apptry/main/IMG_20250809_154135.png" alt="Idle Miner Tycoon Logo">
-      <div class="card-content">
-        <div class="title">Idle Miner Tycoon</div>
-        <div class="rating">⭐ 4.5 / 5 based on real player reviews</div>
-        <div class="rating-count">📊 5 million reviews</div>
-        <div class="info">
-          <span class="tag">Simulation Game</span>
-          <span>+100M Downloads</span>
-        </div>
-        <div class="description">
-          🛠 Manage your mines, hire managers, and earn idle cash in this addictive tycoon simulation! Perfect for strategy lovers who enjoy building and optimizing.
-        </div>
-        <ul class="features">
-          <li>✅ Build and expand multiple mines</li>
-          <li>💰 Automate production for more profits</li>
-          <li>🌎 Play offline and online</li>
-          <li>🎯 Compete in live events for big rewards</li>
-          <li>📈 Watch your business grow while you sleep</li>
-        </ul>
-        <a href="https://appinstallcheck.com/cl/i/qk7gn4" class="download-btn" target="_blank">🎯 Download Now</a>
-      </div>
-    </div>
+<!-- Features -->
+<section class="features">
+  <div class="feature-card">
+    <span>🏢</span>
+    <h3>Build & Expand</h3>
+    <p>Hire managers  , upgrade your mines and keep the cash flowing even when you're offline.</p>
   </div>
+  <div class="feature-card">
+    <span>🛠</span>
+    <h3>Manage Staff</h3>
+    <p>Manage and expand multiple mine simultaneously</p>
+  </div>
+  <div class="feature-card">
+    <span>💰</span>
+    <h3>Idle Profits</h3>
+    <p>Earn money even when you're not playing.</p>
+  </div>
+  <div class="feature-card">
+    <span>🎯</span>
+    <h3>Keep Order</h3>
+    <p>Grow your business into an unstoppable empire</p>
+  </div>
+</section>
+
+<!-- Ratings -->
+<section class="rating-section">
+  <div class="stars">⭐⭐⭐⭐⭐</div>
+  <h2>4.6 / 5</h2>
+  <p>Based on 5M+ reviews • 100M+ downloads</p>
+</section>
+
+<!-- Sticky Download Button -->
+<a href="https://appinstallcheck.com/cl/i/qk7gn4" class="sticky-btn">⬇ Download Now</a>
+
 </body>
 </html>
