--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <!-- Hero Section -->
 <section class="hero">
   <div class="hero-content">
-    <img src="https://i.imgur.com/0bW2FIE.png" alt="Prison Empire Tycoon Logo" class="hero-logo">
+    <img src="https://raw.githubusercontent.com/appliink/apptry/main/IMG_20250809_154135.png" alt="Prison Empire Tycoon Logo" class="hero-logo">
     <h1>Idle Miner Tycoon</h1>
     <p>Build your mining empire and automate your production to become the richest tycoon in the world !.</p>
     <a href="https://appinstallcheck.com/cl/i/qk7gn4" class="btn-primary">🎮 Play Now</a>
