--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   /* Hero Section */
   .hero {
     height: 100vh;
-    background: url('https://i.imgur.com/Q4uKFxM.jpeg') center/cover no-repeat;
+    background: url('https://raw.githubusercontent.com/appliink/apptry/main/idle-miner-tycoon-screenshot.jpg') center/cover no-repeat;
     position: relative;
     display: flex;
     flex-direction: column;
