--- a/index.html
+++ b/index.html
@@ -1,186 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Idle Miner Tycoon</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Idle Tycoon Games Hub</title>
 <style>
-  * {margin: 0; padding: 0; box-sizing: border-box;}
-  body {
-    font-family: 'Segoe UI', sans-serif;
-    color: white;
-    background-color: #0d1117;
-    overflow-x: hidden;
-  }
-
-  /* Hero Section */
-  .hero {
-    height: 100vh;
-    background: url('https://raw.githubusercontent.com/appliink/apptry/main/IMG_20250813_153819.jpg') center/cover no-repeat;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-  .hero::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: rgba(0,0,0,0.6);
-  }
-  .hero-content {
-    position: relative;
-    z-index: 2;
-    max-width: 800px;
-    padding: 20px;
-  }
-  .hero-logo {
-    width: 140px;
-    margin-bottom: 20px;
-  }
-  .hero h1 {
-    font-size: 2.4rem;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  .hero p {
-    font-size: 1.1rem;
-    margin-bottom: 20px;
-    color: #d1d5db;
-  }
-  .btn-primary {
-    display: inline-block;
-    padding: 14px 26px;
-    background: linear-gradient(90deg, #0ea5e9, #3b82f6);
-    color: white;
-    font-size: 1rem;
-    border-radius: 10px;
-    text-decoration: none;
-    transition: transform 0.2s, box-shadow 0.2s;
-  }
-  .btn-primary:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 6px 20px rgba(0,0,0,0.4);
-  }
-
-  /* Features Section */
-  .features {
-    padding: 60px 20px;
-    background: #111827;
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-    gap: 20px;
-    max-width: 1100px;
-    margin: auto;
-  }
-  .feature-card {
-    background: rgba(255,255,255,0.05);
-    border-radius: 15px;
-    padding: 20px;
-    text-align: center;
-    transition: transform 0.3s;
-  }
-  .feature-card:hover {
-    transform: translateY(-5px);
-  }
-  .feature-card span {
-    font-size: 2rem;
-    display: block;
-    margin-bottom: 10px;
-  }
-  .feature-card h3 {
-    font-size: 1.2rem;
-    margin-bottom: 6px;
-    color: #facc15;
-  }
-  .feature-card p {
-    font-size: 0.9rem;
-    color: #d1d5db;
-  }
-
-  /* Rating Section */
-  .rating-section {
-    background: #0f172a;
-    padding: 50px 20px;
-    text-align: center;
-  }
-  .stars {
-    font-size: 1.5rem;
-    color: #facc15;
-    margin-bottom: 10px;
-  }
-  .rating-section p {
-    color: #d1d5db;
-    font-size: 0.95rem;
-  }
-
-  /* Sticky Download Button */
-  .sticky-btn {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: linear-gradient(90deg, #0ea5e9, #3b82f6);
-    color: white;
-    padding: 12px 20px;
-    border-radius: 50px;
-    text-decoration: none;
-    font-weight: bold;
-    z-index: 999;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.4);
-    transition: transform 0.2s;
-  }
-  .sticky-btn:hover {
-    transform: scale(1.05);
-  }
+    body {
+        margin: 0;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background: linear-gradient(135deg, #0d1117, #1a1f29);
+        color: white;
+    }
+    header {
+        padding: 40px 20px;
+        text-align: center;
+        background: linear-gradient(90deg, #00f5a0, #00d9f5);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+    header h1 {
+        font-size: 2.3rem;
+        margin: 0 0 15px;
+    }
+    header p {
+        color: #aaa;
+        font-size: 1rem;
+    }
+    .games-section {
+        padding: 30px 20px;
+        max-width: 1200px;
+        margin: auto;
+    }
+    .games-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: 25px;
+    }
+    .game-card {
+        background: #161b22;
+        border-radius: 14px;
+        overflow: hidden;
+        box-shadow: 0 6px 18px rgba(0,0,0,0.4);
+        transition: transform 0.25s ease, box-shadow 0.25s ease;
+    }
+    .game-card:hover {
+        transform: translateY(-6px);
+        box-shadow: 0 10px 22px rgba(0,0,0,0.6);
+    }
+    .game-card img {
+        width: 100%;
+        height: 180px;
+        object-fit: cover;
+        cursor: pointer;
+    }
+    .game-content {
+        padding: 15px;
+    }
+    .game-content h2 {
+        margin: 0 0 10px;
+        font-size: 1.3rem;
+        color: #00d9f5;
+    }
+    .game-content p {
+        color: #bbb;
+        font-size: 0.9rem;
+        line-height: 1.4;
+    }
+    .download-btn {
+        display: inline-block;
+        margin-top: 12px;
+        padding: 10px 18px;
+        background: linear-gradient(135deg, #00f5a0, #00d9f5);
+        color: black;
+        font-weight: bold;
+        border-radius: 8px;
+        text-decoration: none;
+        transition: 0.25s;
+    }
+    .download-btn:hover {
+        opacity: 0.9;
+        transform: scale(1.05);
+    }
 </style>
 </head>
 <body>
 
-<!-- Hero Section -->
-<section class="hero">
-  <div class="hero-content">
-    <img src="https://raw.githubusercontent.com/appliink/apptry/main/IMG_20250809_154135.png" alt="Idle Miner Tycoon Logo" class="hero-logo">
-    <h1>Idle Miner Tycoon</h1>
-    <p>Build your mining empire and automate your production to become the richest tycoon in the world!</p>
-    <a href="https://appinstallcheck.com/cl/i/qk7gn4" class="btn-primary">🎮 Play Now</a>
-  </div>
-</section>
+<header>
+    <h1>🔥 The Best Idle Tycoon Games 🔥</h1>
+    <p>Pick your game, build your empire, and profit even while offline!</p>
+</header>
 
-<!-- Features -->
-<section class="features">
-  <div class="feature-card">
-    <span>🏢</span>
-    <h3>Build & Expand</h3>
-    <p>Hire managers, upgrade your mines and keep the cash flowing even when you're offline.</p>
-  </div>
-  <div class="feature-card">
-    <span>🛠</span>
-    <h3>Manage Staff</h3>
-    <p>Manage and expand multiple mines simultaneously.</p>
-  </div>
-  <div class="feature-card">
-    <span>💰</span>
-    <h3>Idle Profits</h3>
-    <p>Earn money even when you're not playing.</p>
-  </div>
-  <div class="feature-card">
-    <span>🎯</span>
-    <h3>Keep Order</h3>
-    <p>Grow your business into an unstoppable empire.</p>
-  </div>
-</section>
+<section class="games-section" id="games">
+    <div class="games-grid">
 
-<!-- Ratings -->
-<section class="rating-section">
-  <div class="stars">⭐⭐⭐⭐⭐</div>
-  <h2>4.6 / 5</h2>
-  <p>Based on 5M+ reviews • 100M+ downloads</p>
-</section>
+        <!-- Idle Miner Tycoon -->
+        <div class="game-card">
+            <a href="https://appslocked.com/cl/i/qk7gn4">
+                <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/logo.png" alt="Idle Miner Tycoon">
+            </a>
+            <div class="game-content">
+                <h2>Idle Miner Tycoon</h2>
+                <p>Automate your mines, hire managers, and scale production across the world. Optimize transport lines and watch the cash flow.</p>
+                <a href="https://appslocked.com/cl/i/qk7gn4" class="download-btn">⬇️ Download</a>
+            </div>
+        </div>
 
-<!-- Sticky Download Button -->
-<a href="https://appinstallcheck.com/cl/i/qk7gn4" class="sticky-btn">⬇ Download Now</a>
+        <!-- Prison Empire Tycoon -->
+        <div class="game-card">
+            <a href="https://appverification.net/cl/i/xpvvkj">
+                <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/unnamed.jpg" alt="Prison Empire Tycoon">
+            </a>
+            <div class="game-content">
+                <h2>Prison Empire Tycoon</h2>
+                <p>Build secure facilities, manage staff, and keep things under control. Expand wings, maintain order, and keep your prison profitable.</p>
+                <a href="https://appverification.net/cl/i/xpvvkj" class="download-btn">⬇️ Download</a>
+            </div>
+        </div>
+
+        <!-- Idle Police Tycoon -->
+        <div class="game-card">
+            <a href="https://appinstallcheck.com/cl/i/1x55kk">
+                <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/i.jpeg" alt="Idle Police Tycoon">
+            </a>
+            <div class="game-content">
+                <h2>Idle Police Tycoon</h2>
+                <p>Run the police department, solve cases, and grow your force to maintain law and order in your city.</p>
+                <a href="https://appinstallcheck.com/cl/i/1x55kk" class="download-btn">⬇️ Download</a>
+            </div>
+        </div>
+
+        <!-- Idle Barber Shop Tycoon -->
+        <div class="game-card">
+            <a href="https://appverification.net/cl/i/o4xxd4">
+                <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/IMG_20250816_000958.jpg" alt="Idle Barber Shop Tycoon">
+            </a>
+            <div class="game-content">
+                <h2>Idle Barber Shop Tycoon</h2>
+                <p>Start a cozy barbershop, unlock stylists, and turn trims into profit. Upgrade tools and open new salons across the city.</p>
+                <a href="https://appverification.net/cl/i/o4xxd4" class="download-btn">⬇️ Download</a>
+            </div>
+        </div>
+
+    </div>
+</section>
 
 </body>
 </html>
