--- a/index.html
+++ b/index.html
@@ -7,29 +7,30 @@
 <style>
     body {
         margin: 0;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background: linear-gradient(135deg, #0d1117, #1a1f29);
-        color: white;
+        font-family: 'Poppins', sans-serif;
+        background: #0e0e10;
+        color: #f5f5f5;
     }
     header {
-        padding: 40px 20px;
         text-align: center;
-        background: linear-gradient(90deg, #00f5a0, #00d9f5);
+        padding: 60px 20px 40px;
+        background: linear-gradient(135deg, #00f5a0, #00d9f5);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
     header h1 {
-        font-size: 2.3rem;
+        font-size: 2.6rem;
         margin: 0 0 15px;
+        font-weight: 700;
     }
     header p {
         color: #aaa;
-        font-size: 1rem;
+        font-size: 1.1rem;
     }
     .games-section {
-        padding: 30px 20px;
         max-width: 1200px;
         margin: auto;
+        padding: 30px 20px 60px;
     }
     .games-grid {
         display: grid;
@@ -37,57 +38,83 @@
         gap: 25px;
     }
     .game-card {
-        background: #161b22;
-        border-radius: 14px;
+        background: #18181b;
+        border-radius: 16px;
         overflow: hidden;
-        box-shadow: 0 6px 18px rgba(0,0,0,0.4);
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0 6px 18px rgba(0,0,0,0.5);
         transition: transform 0.25s ease, box-shadow 0.25s ease;
     }
     .game-card:hover {
-        transform: translateY(-6px);
-        box-shadow: 0 10px 22px rgba(0,0,0,0.6);
+        transform: translateY(-8px);
+        box-shadow: 0 12px 25px rgba(0,0,0,0.7);
     }
-    .game-card img {
+    .game-image {
+        position: relative;
+        overflow: hidden;
+    }
+    .game-image img {
         width: 100%;
-        height: 180px;
+        height: 200px;
         object-fit: cover;
+        display: block;
+        transition: transform 0.4s ease;
         cursor: pointer;
     }
+    .game-card:hover .game-image img {
+        transform: scale(1.08);
+    }
     .game-content {
-        padding: 15px;
+        padding: 20px;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
     .game-content h2 {
         margin: 0 0 10px;
-        font-size: 1.3rem;
+        font-size: 1.4rem;
         color: #00d9f5;
     }
     .game-content p {
+        flex: 1;
         color: #bbb;
-        font-size: 0.9rem;
-        line-height: 1.4;
+        font-size: 0.95rem;
+        line-height: 1.5;
     }
     .download-btn {
         display: inline-block;
-        margin-top: 12px;
-        padding: 10px 18px;
+        margin-top: 15px;
+        padding: 12px 20px;
         background: linear-gradient(135deg, #00f5a0, #00d9f5);
-        color: black;
+        color: #0e0e10;
         font-weight: bold;
-        border-radius: 8px;
+        border-radius: 10px;
         text-decoration: none;
+        text-align: center;
         transition: 0.25s;
+        box-shadow: 0 4px 10px rgba(0,217,245,0.3);
     }
     .download-btn:hover {
         opacity: 0.9;
-        transform: scale(1.05);
+        transform: translateY(-2px);
+        box-shadow: 0 6px 15px rgba(0,217,245,0.5);
+    }
+    footer {
+        text-align: center;
+        padding: 30px 20px;
+        color: #777;
+        font-size: 0.85rem;
+        background: #0c0c0e;
     }
 </style>
 </head>
 <body>
 
 <header>
-    <h1>🔥 The Best Idle Tycoon Games 🔥</h1>
-    <p>Pick your game, build your empire, and profit even while offline!</p>
+    <h1>🎮 Idle Tycoon Games Hub</h1>
+    <p>Choose your game, grow your empire, and keep earning while you’re offline.</p>
 </header>
 
 <section class="games-section" id="games">
@@ -95,54 +122,66 @@
 
         <!-- Idle Miner Tycoon -->
         <div class="game-card">
-            <a href="https://appslocked.com/cl/i/qk7gn4">
-                <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/logo.png" alt="Idle Miner Tycoon">
-            </a>
+            <div class="game-image">
+                <a href="https://appslocked.com/cl/i/qk7gn4">
+                    <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/logo.png" alt="Idle Miner Tycoon">
+                </a>
+            </div>
             <div class="game-content">
                 <h2>Idle Miner Tycoon</h2>
-                <p>Automate your mines, hire managers, and scale production across the world. Optimize transport lines and watch the cash flow.</p>
+                <p>Automate your mines, hire managers, and scale production. Optimize logistics and watch profits grow endlessly.</p>
                 <a href="https://appslocked.com/cl/i/qk7gn4" class="download-btn">⬇️ Download</a>
             </div>
         </div>
 
         <!-- Prison Empire Tycoon -->
         <div class="game-card">
-            <a href="https://appverification.net/cl/i/xpvvkj">
-                <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/unnamed.jpg" alt="Prison Empire Tycoon">
-            </a>
+            <div class="game-image">
+                <a href="https://appverification.net/cl/i/xpvvkj">
+                    <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/unnamed.jpg" alt="Prison Empire Tycoon">
+                </a>
+            </div>
             <div class="game-content">
                 <h2>Prison Empire Tycoon</h2>
-                <p>Build secure facilities, manage staff, and keep things under control. Expand wings, maintain order, and keep your prison profitable.</p>
+                <p>Build and upgrade your prison. Manage staff, keep order, and expand your empire while maximizing income.</p>
                 <a href="https://appverification.net/cl/i/xpvvkj" class="download-btn">⬇️ Download</a>
             </div>
         </div>
 
         <!-- Idle Police Tycoon -->
         <div class="game-card">
-            <a href="https://appinstallcheck.com/cl/i/1x55kk">
-                <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/i.jpeg" alt="Idle Police Tycoon">
-            </a>
+            <div class="game-image">
+                <a href="https://appinstallcheck.com/cl/i/1x55kk">
+                    <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/i.jpeg" alt="Idle Police Tycoon">
+                </a>
+            </div>
             <div class="game-content">
                 <h2>Idle Police Tycoon</h2>
-                <p>Run the police department, solve cases, and grow your force to maintain law and order in your city.</p>
+                <p>Manage a police station, respond to cases, upgrade facilities, and protect the city while growing profits.</p>
                 <a href="https://appinstallcheck.com/cl/i/1x55kk" class="download-btn">⬇️ Download</a>
             </div>
         </div>
 
         <!-- Idle Barber Shop Tycoon -->
         <div class="game-card">
-            <a href="https://appverification.net/cl/i/o4xxd4">
-                <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/IMG_20250816_000958.jpg" alt="Idle Barber Shop Tycoon">
-            </a>
+            <div class="game-image">
+                <a href="https://appverification.net/cl/i/o4xxd4">
+                    <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/IMG_20250816_000958.jpg" alt="Idle Barber Shop Tycoon">
+                </a>
+            </div>
             <div class="game-content">
                 <h2>Idle Barber Shop Tycoon</h2>
-                <p>Start a cozy barbershop, unlock stylists, and turn trims into profit. Upgrade tools and open new salons across the city.</p>
+                <p>Run your own barbershop, attract customers, upgrade tools, and build a stylish empire in the city.</p>
                 <a href="https://appverification.net/cl/i/o4xxd4" class="download-btn">⬇️ Download</a>
             </div>
         </div>
 
     </div>
 </section>
+
+<footer>
+    © 2025 Idle Tycoon Hub. All rights reserved.
+</footer>
 
 </body>
 </html>
